In fullscreen, get document background color from the fullscreen element; stop creating a special black background for low power video.

Bug: 781637
Change-Id: I25e553450544bf1abaeb6e2f3b11d280d8088015